feat: update header

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 
             </a>
             <div class="col-sm-3 d-none d-sm-block bg-color">
-               <p class="tel_no"> Call us:    <a href="tel: 555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
+               <p class="tel_no"> Call us:    <a href="tel: 555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume" area-hidden="true"></i> </a></p>
 
             </div>
             <div class="col-6 col-sm-5 bg-color">
-                <ul class="nav list-inline">
-                    <li class="list-inline-item">
+                <ul class="list-inline">
+                    <li class="list-inline-item menuitem">
                         <a href="#"><span>HOME</span></a>
                     </li>
-                    <li class="list-inline-item">
+                    <li class="list-inline-item menuitem">
                         <a href="#"><span>DESTINATIONS</span></a>
                     </li>
-                    <li class="list-inline-item">
+                    <li class="list-inline-item menuitem">
                         <a href="#"><span>CONTACT</span></a>
                     </li>
-                    <li class="list-inline-item">
+                    <li class="list-inline-item menuitem">
                         <a href="#"><span>DOWNLOAD BROCHURE</span></a>
                     </li>
             </div>
