--- a/landing.html
+++ b/landing.html
@@ -44,11 +44,11 @@
         <div class="row">
 
             <div class="col-md-4 d-none d-md-block footer-common">
-                <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-download"area-hidden="true"></i> Download Brochure </a></p>
+                <p><a href="#"><i class="fa-solid fa-download"area-hidden="true"></i> Download Brochure </a></p>
             </div>
 
             <div class="col-sm-6 col-md-4 d-none d-sm-block d-md-block footer-common">
-                <p><a href="#"><i class="fa-solid fa-file-signature" area-hidden="true"></i> Terms & Conditions </a></p>
+                <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-file-signature" area-hidden="true"></i> Terms & Conditions </a></p>
             </div>
 
             <div class="col-12 col-sm-6 col-md-4 footer-common">
