feat:index.html testimonials and why book with us added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,69 @@
         </div>
     </header>
 
-    <section>
+    <section class="row hero-image">
+        <div class="col-12">
+
+        </div>
+    </section>
+
+    <section class="container-fluid">
+
+        <div class="row">
+            <div class="col-12 testimonials-header">
+                <p>Testimonials</p>
+            </div>
+        </div>
+        <div class="row testimonials">
+            <div class="col-12 col-sm-6 col-md-4 center">
+                <div class="review">
+                    <p>Write a riview here</p>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 center">
+                <div class="review">
+                    <p>Write a riview here</p>
+                </div>
+            </div>
+            <div class="col-md-4 center">
+                <div class="review">
+                    <p>Write a riview here</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="container-fluid why-book-with-us">
+
+        <div class="row">
+            <div class="col-12 why-book-with-us-header">
+                <p>Why book with us?</p>
+            </div>
+        </div>
+        <div class="row why-book-with-us">
+            <div class="col-12 col-sm-6 col-sm-3 center">
+                <div class="valueitem">
+                    <p><i class="fa-solid fa-sack-dollar"></i>Flexible Payment Options</p>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-sm-3 center">
+                <div class="valueitem">
+                    <p><i class="fa-solid fa-shield"></i>Fully Protected Holidays</p>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-sm-3 center">
+                <div class="valueitem">
+                    <p><i class="fa-solid fa-phone"></i>24/7 Customer Service</p>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-sm-3 center">
+                <div class="valueitem">
+                    <p><i class="fa-solid fa-piggy-bank"></i>Best Value Deals</p>
+                </div>
+            </div>
+       
+        </div>
 
     </section>
 
