Feat: hero image section added in index.html

--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
         </div>
     </header>
 
-    <section class="row hero-image">
+    <section class="row">
         <div class="col-12">
-
+            <div class="hero-image center">
+                <img src="assets/images/seychelles.jpg" alt="image of seychelles">
+                <button type="button" class="btn-home-deal">See Deals</button>
+            </div>
         </div>
     </section>
 
-    <section class="container-fluid">
+    <section>
 
         <div class="row">
             <div class="col-12 testimonials-header">
