feat: Testimonials content update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Get2Go Holidays</title>
 </head>
 <body>
-    <header>
+    <header class="container-fluid">
         <div class="row">
             <a href="index.html" class="col-6 col-sm-4 logo">
 
@@ -36,36 +36,47 @@
         </div>
     </header>
 
-    <section class="row">
-        <div class="col-12">
-            <div class="hero-image center">
-                <img src="assets/images/seychelles.jpg" alt="image of seychelles">
-                <button type="button" class="btn-home-deal">See Deals</button>
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="hero-image center">
+                    <img src="assets/images/seychelles.jpg" alt="image of seychelles">
+                    <button type="button" class="btn-home-deal">See Deals</button>
+                </div>
             </div>
         </div>
+    
     </section>
 
-    <section>
+    <section class="container-fluid testimonials">
 
         <div class="row">
             <div class="col-12 testimonials-header">
                 <p>Testimonials</p>
             </div>
         </div>
-        <div class="row testimonials">
+        <div class="row">
             <div class="col-12 col-sm-6 col-md-4 center">
                 <div class="review">
-                    <p>Write a riview here</p>
+                    <p>"My experience with Get2Go Holidays was nothing short of amazing! From start to finish, their team was attentive, knowledgeable, 
+                        and dedicated to making my vacation unforgettable. I booked a tropical getaway through them, and every detail was taken care of with precision.
+                         I highly recommend Get2Go Holidays to anyone looking for a hassle-free and enjoyable travel experience."</p>
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 center">
                 <div class="review">
-                    <p>Write a riview here</p>
+                    <p>"Get2Go Holidays exceeded my expectations in every way possible. Their customer service was exceptional, 
+                        and their holiday packages were diverse and well-planned. I recently went on a group tour organized by them,
+                         and it was one of the best travel experiences I've had. I appreciated their attention to detail and commitment to providing top-notch service.
+                          I will definitely be booking with Get2Go Holidays again in the future."</p>
                 </div>
             </div>
             <div class="col-md-4 center">
-                <div class="review">
-                    <p>Write a riview here</p>
+                <div class="review d-sm-none d-md-block">
+                    <p>"I can't say enough good things about Get2Go Holidays! Their team went above and beyond to ensure that my family's vacation was perfect from 
+                        beginning to end. We booked a customized tour package with them, and every aspect of our trip was meticulously planned and executed. 
+                        The accommodations were superb, the activities were fantastic, and the overall experience was truly unforgettable. Thank you, Get2Go Holidays,
+                         for an incredible holiday!"</p>
                 </div>
             </div>
         </div>
