feat: Holiday Type section added to deals.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="col-12">
                 <div class="hero-image center">
                     <img src="assets/images/seychelles.jpg" alt="image of seychelles">
-                    <button type="button" class="btn-home-deal">See Deals</button>
+                    <a href="destinations.html"><button type="button" class="btn-home-deal">See Deals</button></a>
                 </div>
             </div>
         </div>
