--- a/destinations.html
+++ b/destinations.html
@@ -36,7 +36,36 @@
         </div>
     </header>
 
-    <section>
+    <section class="container-fluid">
+
+        <div class="row">
+            <div class="col-12">
+                <p class="destinations-header">Holiday Types</p>
+            </div>
+        </div>
+        <div class="row section-container center">
+
+            <div class="col-12 col-sm-3 col-md-4 deal-type-container center">
+                <img src="assets/images/peru.jpg" alt="">
+                <p class="type-caption">Bucketlist Holidays</p>
+                <a href=""><button type="button" class="btn-see-deals">See Deals</button></a>
+            </div> 
+            <div class="col-12 col-sm-3 col-md-4 deal-type-container center">
+                <img src="assets/images/newyork.jpg" alt="">
+                <p class="type-caption">Multicity Holidays</p>
+                <a href=""><button type="button" class="btn-see-deals">See Deals</button></a>
+
+
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 deal-type-container center">
+                <img src="assets/images/beach_holidays.jpg" alt="">
+                <p class="type-caption">Beach Holidays</p>
+                <a href=""><button type="button" class="btn-see-deals">See Deals</button></a>
+
+
+            </div>
+
+        </div>
 
     </section>
 
