feat: destination.html , multi destination section added

--- a/destinations.html
+++ b/destinations.html
@@ -45,25 +45,89 @@
         </div>
         <div class="row section-container center">
 
-            <div class="col-12 col-sm-3 col-md-4 deal-type-container center">
+            <div class="col-12 col-sm-6 col-md-4 deal-type-container center">
                 <img src="assets/images/peru.jpg" alt="">
                 <p class="type-caption">Bucketlist Holidays</p>
-                <a href=""><button type="button" class="btn-see-deals">See Deals</button></a>
+                <a href="#"><button type="button" class="btn-see-deals">See Deals</button></a>
             </div> 
-            <div class="col-12 col-sm-3 col-md-4 deal-type-container center">
+            <div class="col-12 col-sm-6 col-md-4 deal-type-container center">
                 <img src="assets/images/newyork.jpg" alt="">
                 <p class="type-caption">Multicity Holidays</p>
-                <a href=""><button type="button" class="btn-see-deals">See Deals</button></a>
+                <a href="#"><button type="button" class="btn-see-deals">See Deals</button></a>
 
 
             </div>
-            <div class="col-12 col-sm-6 col-md-4 deal-type-container center">
+            <div class="col-12 col-md-4 deal-type-container center">
                 <img src="assets/images/beach_holidays.jpg" alt="">
                 <p class="type-caption">Beach Holidays</p>
-                <a href=""><button type="button" class="btn-see-deals">See Deals</button></a>
+                <a href="#"><button type="button" class="btn-see-deals">See Deals</button></a>
 
 
             </div>
+
+        </div>
+
+    </section>
+
+    <section class="container-fluid">
+
+        <div class="row">
+            <div class="col-12">
+                <p class="destinations-header">Multi Destination Deals</p>
+            </div>
+        </div>
+        <div class="row section-container center">
+
+            <div class="col-12 col-md-4 multi-type-container center">
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                      <div class="flip-card-front">
+                        <img src="assets/images/newyork.jpg" alt="Image of NewYork">
+                      </div>
+                      <div class="flip-card-back">
+                        <h1>European Extravaganza</h1>
+                        <p>Paris,Venice,Rome & Barcelona</p>
+                        <p>deals from £399</p>
+                      </div>
+                    </div>
+                </div>
+ 
+            </div> 
+
+            <div class="col-12 col-md-4 multi-type-container center">
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                      <div class="flip-card-front">
+                        <img src="assets/images/newyork.jpg" alt="Image of NewYork">
+                      </div>
+                      <div class="flip-card-back">
+                        <h1>European Extravaganza</h1>
+                        <p>Paris,Venice,Rome & Barcelona</p>
+                        <p>deals from £399</p>
+                      </div>
+                    </div>
+                </div>
+ 
+            </div> 
+
+            <div class="col-12 col-md-4 multi-type-container center">
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                      <div class="flip-card-front">
+                        <img src="assets/images/newyork.jpg" alt="Image of NewYork">
+                      </div>
+                      <div class="flip-card-back">
+                        <h1>European Extravaganza</h1>
+                        <p>Paris,Venice,Rome & Barcelona</p>
+                        <p>deals from £399</p>
+                      </div>
+                    </div>
+                </div>
+ 
+            </div> 
 
         </div>
 
