Feat/docs: complete all sections of destinations.html and update README.md

--- a/destinations.html
+++ b/destinations.html
@@ -43,6 +43,7 @@
                 <p class="destinations-header">Holiday Types</p>
             </div>
         </div>
+
         <div class="row section-container center">
 
             <div class="col-12 col-sm-6 col-md-4 deal-type-container center">
@@ -69,6 +70,8 @@
 
     </section>
 
+    <hr>
+
     <section class="container-fluid">
 
         <div class="row">
@@ -76,6 +79,7 @@
                 <p class="destinations-header">Multi Destination Deals</p>
             </div>
         </div>
+
         <div class="row section-container center">
 
             <div class="col-12 col-md-4 multi-type-container center">
@@ -86,9 +90,9 @@
                         <img src="assets/images/newyork.jpg" alt="Image of NewYork">
                       </div>
                       <div class="flip-card-back">
-                        <h1>European Extravaganza</h1>
-                        <p>Paris,Venice,Rome & Barcelona</p>
-                        <p>deals from £399</p>
+                        <h1>American Odyssey</h1>
+                        <p>NewYork & LosAngeles</p>
+                        <p>deals from £899</p>
                       </div>
                     </div>
                 </div>
@@ -100,7 +104,7 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="assets/images/newyork.jpg" alt="Image of NewYork">
+                        <img src="assets/images/paris.jpg" alt="Image of the Eiffel Tower">
                       </div>
                       <div class="flip-card-back">
                         <h1>European Extravaganza</h1>
@@ -117,12 +121,12 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="assets/images/newyork.jpg" alt="Image of NewYork">
+                        <img src="assets/images/greekisles.jpg" alt="Image of Santorini">
                       </div>
                       <div class="flip-card-back">
-                        <h1>European Extravaganza</h1>
-                        <p>Paris,Venice,Rome & Barcelona</p>
-                        <p>deals from £399</p>
+                        <h1>Mediterranean Magic</h1>
+                        <p>Athen & Greek Isles</p>
+                        <p>deals from £499</p>
                       </div>
                     </div>
                 </div>
@@ -132,6 +136,142 @@
         </div>
 
     </section>
+
+    <hr>
+
+    <section class="container-fluid">
+
+        <div class="row">
+            <div class="col-12">
+                <p class="destinations-header">Multi Destination Deals</p>
+            </div>
+        </div>
+
+        <div class="row section-container center">
+
+            <div class="col-12 col-md-4 multi-type-container center">
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                      <div class="flip-card-front">
+                        <img src="assets/images/newyork.jpg" alt="Image of NewYork">
+                      </div>
+                      <div class="flip-card-back">
+                        <h1>American Odyssey</h1>
+                        <p>NewYork & LosAngeles</p>
+                        <p>deals from £899</p>
+                      </div>
+                    </div>
+                </div>
+ 
+            </div> 
+
+            <div class="col-12 col-md-4 multi-type-container center">
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                      <div class="flip-card-front">
+                        <img src="assets/images/paris.jpg" alt="Image of the Eiffel Tower">
+                      </div>
+                      <div class="flip-card-back">
+                        <h1>European Extravaganza</h1>
+                        <p>Paris,Venice,Rome & Barcelona</p>
+                        <p>deals from £399</p>
+                      </div>
+                    </div>
+                </div>
+ 
+            </div> 
+
+            <div class="col-12 col-md-4 multi-type-container center">
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                      <div class="flip-card-front">
+                        <img src="assets/images/greekisles.jpg" alt="Image of Santorini">
+                      </div>
+                      <div class="flip-card-back">
+                        <h1>Mediterranean Magic</h1>
+                        <p>Athen & Greek Isles</p>
+                        <p>deals from £499</p>
+                      </div>
+                    </div>
+                </div>
+ 
+            </div> 
+
+        </div>
+
+    </section>
+
+    <hr>
+
+    <section class="container-fluid">
+
+        <div class="row">
+            <div class="col-12">
+                <p class="destinations-header">Multi Destination Deals</p>
+            </div>
+        </div>
+
+        <div class="row section-container center">
+
+            <div class="col-12 col-md-4 multi-type-container center">
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                      <div class="flip-card-front">
+                        <img src="assets/images/newyork.jpg" alt="Image of NewYork">
+                      </div>
+                      <div class="flip-card-back">
+                        <h1>American Odyssey</h1>
+                        <p>NewYork & LosAngeles</p>
+                        <p>deals from £899</p>
+                      </div>
+                    </div>
+                </div>
+ 
+            </div> 
+
+            <div class="col-12 col-md-4 multi-type-container center">
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                      <div class="flip-card-front">
+                        <img src="assets/images/paris.jpg" alt="Image of the Eiffel Tower">
+                      </div>
+                      <div class="flip-card-back">
+                        <h1>European Extravaganza</h1>
+                        <p>Paris,Venice,Rome & Barcelona</p>
+                        <p>deals from £399</p>
+                      </div>
+                    </div>
+                </div>
+ 
+            </div> 
+
+            <div class="col-12 col-md-4 multi-type-container center">
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                      <div class="flip-card-front">
+                        <img src="assets/images/greekisles.jpg" alt="Image of Santorini">
+                      </div>
+                      <div class="flip-card-back">
+                        <h1>Mediterranean Magic</h1>
+                        <p>Athen & Greek Isles</p>
+                        <p>deals from £499</p>
+                      </div>
+                    </div>
+                </div>
+ 
+            </div> 
+
+        </div>
+
+    </section>
+
+
 
     <footer class="container-fluid bg-color">
         <div class="row">
