feat:destination.html -icons added, enquiry.html - structure and form created

--- a/destinations.html
+++ b/destinations.html
@@ -49,19 +49,19 @@
             <div class="col-12 col-sm-6 col-md-4 deal-type-container center">
                 <img src="assets/images/peru.jpg" alt="">
                 <p class="type-caption">Bucketlist Holidays</p>
-                <a href="#"><button type="button" class="btn-see-deals">See Deals</button></a>
+                <a href="#bucketlist-destinations"><button type="button" class="btn-see-deals">See Deals</button></a>
             </div> 
             <div class="col-12 col-sm-6 col-md-4 deal-type-container center">
                 <img src="assets/images/newyork.jpg" alt="">
                 <p class="type-caption">Multicity Holidays</p>
-                <a href="#"><button type="button" class="btn-see-deals">See Deals</button></a>
+                <a href="#multi-destination-deals"><button type="button" class="btn-see-deals">See Deals</button></a>
 
 
             </div>
             <div class="col-12 col-md-4 deal-type-container center">
                 <img src="assets/images/beach_holidays.jpg" alt="">
                 <p class="type-caption">Beach Holidays</p>
-                <a href="#"><button type="button" class="btn-see-deals">See Deals</button></a>
+                <a href="#beach-holidays"><button type="button" class="btn-see-deals">See Deals</button></a>
 
 
             </div>
@@ -72,11 +72,11 @@
 
     <hr>
 
-    <section class="container-fluid">
+    <section class="container-fluid" id="multi-destination-deals">
 
         <div class="row">
             <div class="col-12">
-                <p class="destinations-header">Multi Destination Deals</p>
+                <p class="destinations-header"><i class="fa-solid fa-city"></i>Multi Destination Deals</p>
             </div>
         </div>
 
@@ -139,11 +139,11 @@
 
     <hr>
 
-    <section class="container-fluid">
+    <section class="container-fluid" id="bucketlist-destinations">
 
         <div class="row">
             <div class="col-12">
-                <p class="destinations-header">Multi Destination Deals</p>
+                <p class="destinations-header"><i class="fa-solid fa-list-check"></i>Bucketlist Destinations</p>
             </div>
         </div>
 
@@ -154,12 +154,12 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="assets/images/newyork.jpg" alt="Image of NewYork">
+                        <img src="assets/images/peru.jpg" alt="Image of Machu Picchu">
                       </div>
                       <div class="flip-card-back">
-                        <h1>American Odyssey</h1>
-                        <p>NewYork & LosAngeles</p>
-                        <p>deals from £899</p>
+                        <h1>Majestic Machu Picchu & Galápagos Islands</h1>
+                        <p>Peru & Ecuador</p>
+                        <p>deals from £1499</p>
                       </div>
                     </div>
                 </div>
@@ -171,12 +171,12 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="assets/images/paris.jpg" alt="Image of the Eiffel Tower">
+                        <img src="assets/images/seychelles.jpg" alt="Image of Seychelles">
                       </div>
                       <div class="flip-card-back">
-                        <h1>European Extravaganza</h1>
-                        <p>Paris,Venice,Rome & Barcelona</p>
-                        <p>deals from £399</p>
+                        <h1>Safari in the Serengeti & Beach Bliss in the Seychelles</h1>
+                        <p>Seychelles</p>
+                        <p>deals from £1299</p>
                       </div>
                     </div>
                 </div>
@@ -188,12 +188,12 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="assets/images/greekisles.jpg" alt="Image of Santorini">
+                        <img src="assets/images/australia.jpg" alt="Image of Sydney">
                       </div>
                       <div class="flip-card-back">
-                        <h1>Mediterranean Magic</h1>
-                        <p>Athen & Greek Isles</p>
-                        <p>deals from £499</p>
+                        <h1>Iconic Australian Outback & Great Barrier Reef</h1>
+                        <p>Australia</p>
+                        <p>deals from £1999</p>
                       </div>
                     </div>
                 </div>
@@ -206,11 +206,11 @@
 
     <hr>
 
-    <section class="container-fluid">
+    <section class="container-fluid" id="beach-holidays">
 
         <div class="row">
             <div class="col-12">
-                <p class="destinations-header">Multi Destination Deals</p>
+                <p class="destinations-header"><i class="fa-solid fa-umbrella-beach"></i>Beach Holidays</p>
             </div>
         </div>
 
@@ -221,12 +221,12 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="assets/images/newyork.jpg" alt="Image of NewYork">
+                        <img src="assets/images/bali.jpg" alt="Image of Bali">
                       </div>
                       <div class="flip-card-back">
-                        <h1>American Odyssey</h1>
-                        <p>NewYork & LosAngeles</p>
-                        <p>deals from £899</p>
+                        <h1>Surf and Sun in Bali</h1>
+                        <p>Seminyak, Kuta, or Uluwatu</p>
+                        <p>deals from £2099</p>
                       </div>
                     </div>
                 </div>
@@ -238,12 +238,12 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="assets/images/paris.jpg" alt="Image of the Eiffel Tower">
+                        <img src="assets/images/barbados.jpg" alt="Image of Barbados">
                       </div>
                       <div class="flip-card-back">
-                        <h1>European Extravaganza</h1>
-                        <p>Paris,Venice,Rome & Barcelona</p>
-                        <p>deals from £399</p>
+                        <h1>Caribbean Delight in Barbados</h1>
+                        <p>From lively beach bars to tranquil coves, Barbados has something for every beach lover.</p>
+                        <p>deals from £1799</p>
                       </div>
                     </div>
                 </div>
@@ -255,12 +255,12 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="assets/images/greekisles.jpg" alt="Image of Santorini">
+                        <img src="assets/images/maldives.jpg" alt="Image of Maldives">
                       </div>
                       <div class="flip-card-back">
-                        <h1>Mediterranean Magic</h1>
-                        <p>Athen & Greek Isles</p>
-                        <p>deals from £499</p>
+                        <h1>Tropical Bliss in the Maldives</h1>
+                        <p>Ultimate luxury beach escape in the Maldives with pristine white sands and turquoise lagoons. </p>
+                        <p>deals from £2199</p>
                       </div>
                     </div>
                 </div>
