feat: finish form on enquiry.html page

--- a/enquiry.html
+++ b/enquiry.html
@@ -39,12 +39,23 @@
     <section class="container-fluid">
 
         <div class="row">
-            <div class="col-12 col-sm-3 bg-color">
+            <div class="col-12 col-sm-3 bg-color center">
+
+                <div class="contact-info">
+
+                    <h2>Contact Information</h2>
+
+                    <p>Email: info@get2goholidays.com</p>
+                    <p>Phone: 555 555-333-2346</p>
+                    <Address>123 Main Street, Bristol</Address>
+                    <p>Working Hours: Monday to Friday, 9:00 AM - 6:00 PM</p>
+
+                </div>
 
             </div>
             <div class="col-12 col-sm-9 form-container center"> 
 
-                <form class="enquiry-form" method="POST" action="landing.html">
+                <form class="enquiry-form" method="POST" action="https://formdump.codeinstitute.net/">
                     <h2> <i class="fa-solid fa-file-signature"></i> Enquiry Form </h2>
 
                     <label for="fname">First Name</label>
@@ -82,7 +93,7 @@
                     <label for="textarea">Additional Info</label>
                     <textarea id="textarea" name="textarea" placeholder="Let us know any preferences regarding accomodation and travel."></textarea>
 
-                    <input type="submit" value="Submit">
+                    <input class="btn-enquiry" type="submit" value="Submit">
                     
                 </form>
                 
