--- a/enquiry.html
+++ b/enquiry.html
@@ -8,7 +8,7 @@
     <title>Get2Go Holidays</title>
 </head>
 <body>
-    <header>
+    <header class="container-fluid">
         <div class="row">
             <a href="index.html" class="col-6 col-sm-4 logo">
 
