feat: landing page added to form

--- a/enquiry.html
+++ b/enquiry.html
@@ -55,7 +55,7 @@
             </div>
             <div class="col-12 col-sm-9 form-container center"> 
 
-                <form class="enquiry-form" method="POST" action="https://formdump.codeinstitute.net/">
+                <form class="enquiry-form" method="GET" action="landing.html">
                     <h2> <i class="fa-solid fa-file-signature"></i> Enquiry Form </h2>
 
                     <label for="fname">First Name</label>
