--- a/landing.html
+++ b/landing.html
@@ -36,7 +36,28 @@
         </div>
     </header>
 
-    <section>
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-12 landing-page">
+
+                <div class="thankyou-container">
+
+                    <div class="message-container">
+
+                        <h2> Thank you for your enquiry! </h2>
+                        <p>
+                            Thank you for reaching out to us at Get2Go Holidays! We have received your enquiry and appreciate your interest in our services.
+
+                            Our team is currently reviewing your request and will get back to you as soon as possible. In the meantime,
+                            
+                            if you have any urgent questions or additional information to provide, please feel free to contact us directly at info@get2goholidays.com.
+
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
 
     </section>
 
