feat: toggler icon trial on landing page

--- a/landing.html
+++ b/landing.html
@@ -18,22 +18,37 @@
 
             </div>
             <div class="col-6 col-sm-5 bg-color">
-                <ul class="list-inline">
-                    <li class="list-inline-item menuitem">
-                        <a href="index.html"><span>HOME</span></a>
-                    </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="destinations.html"><span>DESTINATIONS</span></a>
-                    </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="enquiry.html"><span>CONTACT</span></a>
-                    </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><span>DOWNLOAD BROCHURE</span></a>
-                    </li>
-                </ul>
+
+                <nav class="navbar">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarToggle">
+
+                        <ul class="navbar-nav">
+                          <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Home</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="destinations.html">DESTINATIONS</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="enquiry.html">CONTACT</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank">DOWNLOAD BROCHURE</a>
+                          </li>
+                        </ul>
+
+                    </div>
+
+                </nav>
+           
+                    
             </div>
         </div>
+
     </header>
 
     <section class="container-fluid">
