--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <header class="container-fluid">
+
         <div class="row">
             <a href="index.html" class="col-6 col-sm-4 logo">
 
@@ -20,24 +21,33 @@
 
             </div>
             <div class="col-6 col-sm-5 bg-color">
-                <ul class="list-inline">
-                    <li class="list-inline-item menuitem">
-                        <a href="index.html"><span>HOME</span></a>
-                    </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="destinations.html"><span>DESTINATIONS</span></a>
-                    </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="enquiry.html"><span>CONTACT</span></a>
-                    </li>
-                    <li class="list-inline-item menuitem">
-                        <a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><span>DOWNLOAD BROCHURE</span></a>
-                    </li>
-                </ul>
+                
+                <nav class="navbar navbar-expand-lg navbar-style">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="destinations.html">DESTINATIONS</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="enquiry.html">CONTACT</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank">DOWNLOAD BROCHURE</a>
+                        </li>
+                      </ul>
+                    </div>
+                </nav>
+                    
             </div>
         </div>
+
     </header>
- 
 
     <section class="container-fluid">
         <div class="row">
@@ -216,5 +226,8 @@
 
 <script src="https://kit.fontawesome.com/353f52eb70.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 
 </html>
