feat: improve responsivness accross whole site

--- a/enquiry.html
+++ b/enquiry.html
@@ -12,14 +12,14 @@
     <header class="container-fluid">
 
         <div class="row">
-            <a href="index.html" class="col-6 col-sm-4 logo">
+            <a href="index.html" class="col-6 col-lg-3 logo">
 
             </a>
-            <div class="col-sm-3 d-none d-sm-block bg-color">
+            <div class="col-lg-3 d-none d-md-block bg-color">
                <p class="tel_no"> Call us:    <a href="tel: 555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume" area-hidden="true"></i> </a></p>
 
             </div>
-            <div class="col-6 col-sm-5 bg-color">
+            <div class="col-6 bg-color">
                 
                 <nav class="navbar navbar-expand-lg navbar-style">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
     <section class="container-fluid">
 
         <div class="row">
-            <div class="col-12 col-sm-3 bg-color center">
+            <div class="d-none d-lg-block col-lg-3 bg-color center">
 
                 <div class="contact-info">
 
@@ -65,7 +65,7 @@
                 </div>
 
             </div>
-            <div class="col-12 col-sm-9 form-container center"> 
+            <div class="col-12 col-lg-9 form-container center"> 
 
                 <form class="enquiry-form" method="GET" action="landing.html">
                     <h2> <i class="fa-solid fa-file-signature"></i> Enquiry Form </h2>
