--- a/landing.html
+++ b/landing.html
@@ -11,14 +11,14 @@
     <header class="container-fluid">
 
         <div class="row">
-            <a href="index.html" class="col-6 col-sm-4 logo">
+            <a href="index.html" class="col-6 col-lg-3 logo">
 
             </a>
-            <div class="col-sm-3 d-none d-sm-block bg-color">
+            <div class="col-lg-3 d-none d-lg-block bg-color">
                <p class="tel_no"> Call us:    <a href="tel: 555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume" area-hidden="true"></i> </a></p>
 
             </div>
-            <div class="col-6 col-sm-5 bg-color">
+            <div class="col-6 bg-color">
                 
                 <nav class="navbar navbar-expand-lg navbar-style">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,13 +56,16 @@
                     <div class="message-container">
 
                         <h2> Thank you for your enquiry! </h2>
-                        <p>
+                        <p class="d-none d-md-block">
                             Thank you for reaching out to us at Get2Go Holidays! We have received your enquiry and appreciate your interest in our services.
 
                             Our team is currently reviewing your request and will get back to you as soon as possible. In the meantime,
                             
                             if you have any urgent questions or additional information to provide, please feel free to contact us directly at info@get2goholidays.com.
 
+                        </p>
+                        <p class="d-md-none">
+                            We have received your enquiry and will get back to you as soon as possible.
                         </p>
                     </div>
                 </div>
