--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <header class="container-fluid">
 
         <div class="row">
-            <a href="index.html" class="col-6 col-sm-4 logo">
+            <a href="index.html" class="col-6 col-lg-3 logo">
 
             </a>
-            <div class="col-sm-3 d-none d-sm-block bg-color">
+            <div class="col-lg-3 d-none d-lg-block bg-color">
                <p class="tel_no"> Call us:    <a href="tel:555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
 
             </div>
-            <div class="col-6 col-sm-5 bg-color">
+            <div class="col-6 bg-color">
                 
                 <nav class="navbar navbar-expand-lg navbar-style">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
