--- a/index.html
+++ b/index.html
@@ -17,21 +17,19 @@
     <header class="container-fluid">
 
         <div class="row">
-            <a href="index.html" class="col-6 col-lg-3 logo">
+            <a href="index.html" class="col-12 col-lg-5 logo">
 
             </a>
             <div class="col-lg-3 d-none d-lg-block bg-color">
-               <p class="tel_no"> Call us:    <a href="tel:555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
+               <p class="tel_no"> Call us:    <a href="tel: 555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume" area-hidden="true"></i> </a></p>
 
             </div>
-            <div class="col-6 bg-color">
+            <div class="col-12 col-lg-4 bg-color">
                 
-                <nav class="navbar navbar-expand-lg navbar-style">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navbar-nav ml-auto">
+                <nav class="navbar navbar-expand navbar-style">
+                   
+                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                      <ul class="navbar-nav">
                         <li class="nav-item active">
                           <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
                         </li>
@@ -56,8 +54,8 @@
     <section class="container-fluid">
 
         <div class="row">
-            <div class="col-12 main-headers">
-                <h2>Latest Deals</h2>
+            <div class="col-12">
+                <h2 class="main-headers">Latest Deals</h2>
             </div>
         </div>
 
@@ -99,8 +97,8 @@
     <section class="container-fluid testimonials">
 
         <div class="row">
-            <div class="col-12 main-headers">
-                <h1>Testimonials</h1>
+            <div class="col-12">
+                <h2 class="main-headers">Testimonials</h2>
             </div>
         </div>
         <div class="row">
@@ -135,7 +133,7 @@
 
         <div class="row">
             <div class="col-12 main-headers">
-                <h1>Why book with us?</h1>
+                <h2 class="main-headers">Why book with us?</h2>
             </div>
         </div>
         <div class="row why-book-with-us">
