--- a/landing.html
+++ b/landing.html
@@ -8,24 +8,23 @@
     <title>Get2Go Holidays</title>
 </head>
 <body>
+
     <header class="container-fluid">
 
         <div class="row">
-            <a href="index.html" class="col-6 col-lg-3 logo">
+            <a href="index.html" class="col-12 col-lg-5 logo">
 
             </a>
             <div class="col-lg-3 d-none d-lg-block bg-color">
                <p class="tel_no"> Call us:    <a href="tel: 555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume" area-hidden="true"></i> </a></p>
 
             </div>
-            <div class="col-6 bg-color">
+            <div class="col-12 col-lg-4 bg-color">
                 
-                <nav class="navbar navbar-expand-lg navbar-style">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navbar-nav ml-auto">
+                <nav class="navbar navbar-expand navbar-style">
+                   
+                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                      <ul class="navbar-nav">
                         <li class="nav-item">
                           <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
                         </li>
