fix/docs: README.md update, Header responsive issues fixed

--- a/enquiry.html
+++ b/enquiry.html
@@ -8,11 +8,12 @@
     <title>Get2Go Holidays</title>
 </head>
 <body>
-
+ 
     <header class="container-fluid">
 
         <div class="row">
             <a href="index.html" class="col-12 col-lg-5 logo">
+                <img src="assets/images/get2goholidays_logo.png" alt="Get2Go Holidays logo" >
 
             </a>
             <div class="col-lg-3 d-none d-lg-block bg-color">
@@ -34,7 +35,7 @@
                         <li class="nav-item active">
                           <a class="nav-link" href="enquiry.html">CONTACT</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" id="Dbrochure">
                           <a class="nav-link" href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank">DOWNLOAD BROCHURE</a>
                         </li>
                       </ul>
