--- a/destinations.html
+++ b/destinations.html
@@ -13,6 +13,7 @@
 
       <div class="row">
           <a href="index.html" class="col-12 col-lg-5 logo">
+              <img src="assets/images/get2goholidays_logo.png" alt="Get2Go Holidays logo" >
 
           </a>
           <div class="col-lg-3 d-none d-lg-block bg-color">
@@ -34,7 +35,7 @@
                       <li class="nav-item">
                         <a class="nav-link" href="enquiry.html">CONTACT</a>
                       </li>
-                      <li class="nav-item">
+                      <li class="nav-item" id="Dbrochure">
                         <a class="nav-link" href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank">DOWNLOAD BROCHURE</a>
                       </li>
                     </ul>
@@ -280,8 +281,6 @@
         </div>
 
     </section>
-
-
 
     <footer class="container-fluid bg-color">
         <div class="row">
